# bitnet-wasm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docker/: docker-compose.yml
src/: main.c  wasm_api.c
src/bench/: benchmark.c
src/inference/: generate.c  generate.h  gguf.c  gguf.h  model.c  model.h  sampler.c  sampler.h  thread_pool.c  thread_pool.h  tokenizer.c  tokenizer.h  weight_loader.c  weight_loader.h
src/kernels/: gemv.c  gemv.h  i2s.c  i2s.h  simd_utils.h  tl1.c  tl1.h  tl2.c  tl2.h  types.h
src/test/: block_sparsity.c  codebook_analysis.c  diagnose_weights.c  embedding_compression.c  embedding_svd.c  entropy_analysis.c  fourth_code.c  inspect_gguf.c  test_inference.c
src/tools/: compress_weights.c  convert_embedding.c
web/: bitnet.js  index.html  inference.html  serve.py  worker.js
